fix alert z-index

--- a/src/sass/components/_alert.scss
+++ b/src/sass/components/_alert.scss
@@ -3,6 +3,6 @@
     position: sticky;
     left: 0;
     top: 10px;
-    z-index: 2000;
+    z-index: 900;
     margin-bottom: 0;
 }
